[gd_scene load_steps=3 format=3 uid="uid://ccsa0ubjt2ocg"]

[ext_resource type="PackedScene" uid="uid://qcmrf7u1heaw" path="res://common/hud.tscn" id="1_xmra0"]
[ext_resource type="Script" path="res://image_manipulation/blood_image.gd" id="2_hnw7u"]

[node name="ImageManipulation" type="Node2D"]

[node name="Hud" parent="." instance=ExtResource("1_xmra0")]

[node name="PanelContainer2" type="PanelContainer" parent="Hud"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -116.0
offset_bottom = 31.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="Hud/PanelContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Hud/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="AutoFill" type="CheckButton" parent="Hud/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "AutoFill: "

[node name="texture_format" type="OptionButton" parent="Hud/PanelContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BloodImage" type="Sprite2D" parent="."]
position = Vector2(288, 162)
centered = false
script = ExtResource("2_hnw7u")
size = Vector2(576, 324)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
